fix: hover flickering problem

--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,11 @@ footer {
 .first {
 	width: 100%;
 	position: absolute;
+    z-index: 0;
 }
 .first:hover {
-	z-index: -1;
+	z-index: -2;
+    transition: 1000ms;
 }
 .hide {
 	z-index: -1;
@@ -121,6 +123,10 @@ footer {
 	font-size: 1.5rem;
 	top: 5px;
 	right: -5px;
+	cursor: pointer;
+}
+.wish:hover {
+	color: var(--discount-color);
 }
 .discount {
 	position: absolute;
@@ -198,9 +204,6 @@ footer a {
 	padding: 0.5rem;
 }
 
-.hide:hover {
-	z-index: 0;
-}
 .small > li a {
 	font-size: 0.8rem;
 }
